---------------------------------------
Added:
  1. Preferences for store display.
     - Product "new" date range in weeks.
       This controls the date range of the "is_new?" method on products.
  2. Enhanced emails for order receipts
     - Receipts now go out as HTML and plain text in a multipart email.
       Had to do this because clients can type in HTML into the TinyMCE
       editor.
     - HTML renders great in Apple mail, but needs work on inline styles
       for proper Gmail/Outlook rendering. (Issue 216)
       
Changed:
  1. Products now show in store until marked discontinued.
     - Was going to implement a preference for this, but seems stupid.
       Allows store owners to show items that are "out of stock" instead of
       product disappearing from the store all together.
  2. No longer validating addresses and excluding PO Boxes.
     Doesn't make sense for everyone, so we removed it.

Updated:
  1. Removed all the stupid Preference.find_by_name calls and replaced
     with a more robust Preference.get_value method.

Upgrade steps:
  0. Upgrade your /vendor directory with the one that ships with Substruct.
  1. rake gems:build
  2. rake db:migrate:plugin NAME=substruct


VERSION 1.3.1 - 08/30/2010
---------------------------------------

Added:
  1. Lightbox.js for image previews on admin side and store.
  2. Can now drag / drop sort variations.
     - Allows you to choose what order they appear when viewing a 
       product on the store.
  3. Order receipt view for admin side.
     Allows easy access to receipts that customers see.
     Great for printing out and including in a shipment.

Updated:
  1. Substruct automatically reloads all classes in development environment
  2. Changed product code length to 100 chars
  3. Easier to override Substruct default routes with app custom ones.

Fixed:
  1. Orders are no longer written to the database for status CART unless 
     something was actually added to the shopping cart.